[hotfix-35503][flink] java.opts增加file.encoding=UTF-8，解决中文乱码问题